Add html and css for header section

--- a/index.html
+++ b/index.html
@@ -14,12 +14,25 @@
         </div>
         <nav id="nav-bar">
             <ul>
-                <li class="nav-link">Shows</li>
-                <li class="nav-link">Training Center</li>
-                <li class="nav-link">Merchandise</li>
+                <li>
+                    <a class="nav-link">Shows</a>
+                </li>
+                <li>
+                    <a class="nav-link">Classes</a>
+                </li>
+                <li>
+                    <a class="nav-link">Corporate</a>
+                </li>
             </ul>
         </nav>
     </header>
 </div>
+<section id="hero">
+    <h2>Nashville's only Improv Theater.</h2>
+    <form action="https://www.freecodecamp.com/email-submit" id="form" type="email-submit" method="post">
+        <input name="email" id="email" type="email" placeholder="Enter your email address" required="">
+        <input id="submit" type="submit" value="Get Started" class="btn">
+    </form>
+</section>
 </body>
 </html>
